--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "0.19.2",
     "bootstrap": "4.4.1",
-    "history": "4.10.1",
+    "history": "^4.10.1",
     "jwt-decode": "2.2.0",
     "lodash": "4.17.15",
     "moment": "2.25.3",
